<resources>
    <string name="app_name">Hunter Talk</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_group_page">group_page</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_groupid">Group id</string>
    <string name="prompt_friends_email">Friend\'s email</string>
    <string name="title_activity_register">Register a new account</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Invalid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">Register a new account</string>
    <string name="title_activity_inside_group">InsideGroupActivity</string>
    <string name="title_with_group_name">Group ID: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nickname</string>
    <string name="nav_header_subtitle">User email</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_map">Map</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_leave">Leave talk group</string>
    <string name="title_activity_sign_in2">SignIn2</string>
    <string name="title_activity_sign_in">signIn</string>
    <string name="title_create_group">Create New Group</string>
    <string name="friendList">Friend List</string>
    <string name="title_show_group_members">Group members</string>
    <string name="welcome_create_group_page">Welcome! Create your group here: </string>
    <string name="add_button">Add</string>
    <string name="welcome_user">Welcome %1$s !</string>
    <string name="create_group">Create group</string>
    <string name="join_group">Join group</string>
    <string name="leave_group_confirmaation">Are you sure you want to leave the group?</string>
    <string name="title_activity_maps">Map </string>
    <string name="mic_permission_complain">Microphone permissions are required to use voice chat.</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="privacy_policy_text">
        "Effective date: May 20, 2019"
        "\n\nHunter Talk (\"us\", \"we\", or \"our\") operates the Hunter Talk mobile application "
        "(the \"Service\")."
        "\nThis page informs you of our policies regarding the collection, use, and disclosure "
        "of personal data when you use our Service and the choices you have associated "
        "with that data."
        "\nWe use your data to provide and improve the Service. By using the Service, you agree "
        "to the collection and use of information in accordance with this policy."
        "\n\nWhat data do we collect?"
        "\nHunter Talk collects the following data:"
        "\n•\tEmail address"
        "\n•\tUsername"
        "\nOur service use Google Firebase, which may collect data such as:"
        "\n•\tPassword"
        "\n•\tEmail address"
        "\n•\tPhone number"
        "\n•\tUser agent"
        "\n•\tIP address"
        "\nThe user can also optionally consent to sharing GPS location information in order to "
        "use our map service."
        "\n\nHow do we collect your data?"
        "\nYou directly provide Hunter Talk with most of the data we collect. We collect data "
        "and process data when you register for our Service."
        "\nHunter Talk may also receive your data indirectly from the following sources:"
        "\n•\tGPS location, when enabled"
        "\n•\tInformation collected by Google Firebase to maintain database functionality"
        "\n\nHow will we use your data?"
        "\nHunter Talk collects your data so that we can:"
        "\n•\tManage your account"
        "\n•\tEmail you when new password is requested"
        "\n•\tIdentify you to other users"
        "\nIf you agree, Hunter Talk will use your location data to share your location with "
        "other users in your Hunter Talk group."
        "\n\nHow do we store your data?"
        "\nHunter Talk securely stores your data with the service Google Firebase. "
        "\nHunter Talk will keep your data from the moment you register and for up to 180 days "
        "after your account is deleted by us or until you request that we delete it."
        "\n\nSecurity of Data"
        "\nThe security of your data is important to us, but remember that no method of "
        "transmission over the Internet, or method of electronic storage is 100% secure. "
        "While we strive to use commercially acceptable means to protect your Personal Data, "
        "we cannot guarantee its absolute security."
        "\n\nTransfer of Data"
        "\nYour information may be transferred to — and maintained on — computers located "
        "outside of your state, province, country or other governmental jurisdiction where the "
        "data protection laws may differ than those from your jurisdiction."
        "\nIf you are located outside Sweden and choose to provide information to us, please note "
        "that we transfer the data, including Personal Data, to Sweden and process it there."
        "\n\nContact Us"
        "\nWrite to us on the following email address: jtlex8@gmail.com\n"
    </string>
</resources>
