<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item                                                                
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_invite" />
    </group>
    <group android:id="@+id/menu_misc">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_leave" />
     </group>

</menu>
