<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".userRelated.SettingsPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Change the fields you want and click apply."
        android:textSize="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/etchangenickname"
            android:text="@string/prompt_nickname"
            android:textColor="@color/hunterGreen" />

        <EditText
            android:id="@+id/etchangenickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName"
            android:backgroundTint="@color/hunterGreen"
            android:drawableTint="@color/hunterGreen"
            android:foregroundTint="@color/hunterGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/etchangepw"
            android:text="@string/prompt_password"
            android:textColor="@color/hunterGreen" />

        <EditText
            android:id="@+id/etchangepw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/hunterGreen"
            android:drawableTint="@color/hunterGreen"
            android:foregroundTint="@color/hunterGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/etchangepw2"
            android:text="@string/prompt_confirm_password"
            android:textColor="@color/hunterGreen" />

        <EditText
            android:id="@+id/etchangepw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/hunterGreen"
            android:drawableTint="@color/hunterGreen"
            android:foregroundTint="@color/hunterGreen" />

    </LinearLayout>

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/hunterGreen"
        android:text="Apply"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/addFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Friends"
        android:backgroundTint="@color/hunterGreen"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log Out"
        android:backgroundTint="@color/hunterGreen"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
</LinearLayout>
